--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -13,6 +13,29 @@
     margin-bottom: 2rem
     line-height: 1.5em
 
+.big-text-no-mb
+    font-family: $font
+    font-size: 3rem
+    font-weight: 300
+    line-height: 1.5em
+    color: $white
+
+.big-text
+    font-family: $font
+    font-size: 3rem
+    font-weight: 300
+    margin-bottom: 2rem
+    line-height: 1.5em
+    color: $white
+
+.position-text
+    font-family: $font
+    font-size: 2rem
+    font-weight: 250
+    margin-bottom: 2rem
+    line-height: 1.5em
+    color: $white
+
 #title
     margin-top: 3rem
     font-family: $font
