--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
     <!-- Character max 160-->
-    <meta name="description" content="{{.Site.Params.description | default "Call me Sam, a theme for Hugo."}}">
+    <meta name="description" content="{{.Site.Params.description | default "My cool website"}}">
     <!-- Card value “summary”, “summary_large_image”, “app”, or “player”-->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:domain" content="{{.Site.BaseURL}}">
@@ -22,7 +22,7 @@
     <meta name="og:image" itemprop="image primaryImageOfPage" content="{{.Site.Params.primaryImage | default "tn.png" | absURL}}">
     <!-- Characters max 60-->
     <title>{{.Title}}</title>
-    <link rel="shortcut icon" href="{{.Site.Params.favicon | default "sam.ico" | absURL }}" id="favicon">
+    <link rel="shortcut icon" href="{{.Site.Params.favicon | default "favicon.ico" | absURL }}" id="favicon">
     <link rel="stylesheet" href="{{ "css/style.css" | absURL}}">
     <!-- Google fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
