fix missing bg img

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -11,7 +11,7 @@
   </head>
   <body>
       <article class="athelas">
-      <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(/images/bg-404.jpg) no-repeat center;">
+      <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url({{.Site.BaseURL}}/images/bg-404.jpg) no-repeat center;">
         <div class="dtc v-mid">
           <header class="white-80">
             <h1 class="f1 f-headline-l code mb3 fw9 dib tracked-tight">404</h1>
