--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,9 +14,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:domain" content="{{.Site.BaseURL}}">
     <!-- Min 120x120px-->
-    <meta name="twitter:image" content="{{ .Site.Params.primaryImage | default "tn.png" | absURL }}">
     <meta name="twitter:title" property="og:title" itemprop="title name" content="{{.Site.Title | default "Sam"}}">
-    <meta name="twitter:description" property="og:description" itemprop="description" content="{{.Site.Params.description | default "Call me Sam, a theme for Hugo."}}">
+    <meta name="twitter:description" property="og:description" itemprop="description" content="{{.Site.Params.description | default "My awesome website!"}}">
     <meta name="og:type" content="website">
     <meta name="og:url" content="{{.Site.BaseURL}}">
     <meta name="og:image" itemprop="image primaryImageOfPage" content="{{.Site.Params.primaryImage | default "tn.png" | absURL}}">
